<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/TVNombreCliente"
            android:layout_width="230dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="52dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="129dp"
            android:text="@string/Nombre_cliente"
            android:textColor="#2E2E2E"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/ETNombreCliente"
            android:layout_width="260dp"
            android:layout_height="wrap_content"

            android:layout_marginStart="50dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="101dp"
            android:autofillHints="@string/Nombre_cliente_hint"
            android:hint="@string/Nombre_cliente_hint"
            android:inputType="text"
            android:minHeight="48dp"
            android:textColorHint="#3A2D2D"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/TVNombreCliente" />

        <TextView
            android:id="@+id/TVCantidadGarrafonesLlenados"
            android:layout_width="230dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="52dp"
            android:layout_marginTop="150dp"
            android:layout_marginEnd="129dp"
            android:text="@string/cantidad_producto"
            android:textColor="#2E2E2E"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/ETCantidadGarrafonesLlenados"
            android:layout_width="260dp"
            android:layout_height="wrap_content"

            android:layout_marginStart="50dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="101dp"
            android:autofillHints="@string/cantidad_producto_hint"
            android:hint="@string/cantidad_producto_hint"
            android:inputType="number"
            android:minHeight="48dp"
            android:textColorHint="#3A2D2D"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/TVCantidadGarrafonesLlenados" />

        <TextView
            android:id="@+id/TVTipoFactura"
            android:layout_width="230dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="52dp"
            android:layout_marginTop="250dp"
            android:layout_marginEnd="129dp"
            android:text="@string/tipo_producto"
            android:textColor="#2E2E2E"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Spinner
            android:id="@+id/ETTipoFactura"
            android:layout_width="113dp"
            android:layout_height="48dp"
            android:layout_marginStart="50dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="101dp"
            android:autofillHints="@string/tipo_producto"
            android:hint="@string/tipo_producto"
            android:inputType="text"
            android:textColorHint="#3A2D2D"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/TVTipoFactura" />

        <TextView
            android:id="@+id/TVPrecioProdcto"
            android:layout_width="230dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="52dp"
            android:layout_marginTop="325dp"
            android:layout_marginEnd="129dp"
            android:text="@string/precio_producto"
            android:textColor="#2E2E2E"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/ETPrecioProdcto"
            android:layout_width="74dp"
            android:layout_height="48dp"

            android:layout_marginStart="50dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="101dp"
            android:autofillHints="@string/precio"
            android:hint="@string/precio"
            android:inputType="number"
            android:textColorHint="#3A2D2D"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/TVPrecioProdcto" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.505"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button" />

        <Button
            android:id="@+id/button"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_marginStart="132dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="133dp"
            android:text="@string/buscar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.532"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ETPrecioProdcto" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>